--- a/modpack.conf
+++ b/modpack.conf
@@ -1,4 +1,4 @@
-name = zero_mtg_shim
+name = zero_compatibility
 description = Provides backward compability for mods written against minetest game
 author = BigBear
-title = Zero MTG Shim
+title = Zero MTG Compatilbity
